[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["Steven-Whitehead <Steven.Whitehead@ibm.com>"]

[tool.poetry.dependencies]
python = "^3.9"
ibm-db = {version = "3.1.2", python = "3.9"}
Flask = "^2.1.2"
Flask-RESTful = "^0.3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
